Fix lang and layout bugs

--- a/styles/components/Header.styl
+++ b/styles/components/Header.styl
@@ -90,7 +90,7 @@
   padding-left 210px
 
 .header_nav.scroll
-  left 200px
+  padding-left 50px
 
 .header_menu
   display none
